# PlumeImpactor

./: .editorconfig  Cargo.toml  README.md
.github/workflows/: build.yml
apps/plumeimpactor/: Cargo.toml  build.rs
apps/plumeimpactor/src/: frame.rs  handlers.rs  keychain.rs  main.rs
apps/plumeimpactor/src/pages/: default.rs  install.rs  login.rs  mod.rs  settings.rs  work.rs
apps/plumeimpactor/src/utils/: device.rs  mod.rs  package.rs
apps/plumesign/: Cargo.toml
apps/plumesign/src/: main.rs
crates/grand_slam/: Cargo.toml
crates/grand_slam/src/: lib.rs
crates/grand_slam/src/auth/: anisette_data.rs  mod.rs
crates/grand_slam/src/auth/account/: login.rs  mod.rs  request.rs  token.rs  two_factor_auth.rs
crates/grand_slam/src/certificate/: identity.rs  mod.rs
crates/grand_slam/src/developer/: mod.rs
crates/grand_slam/src/developer/qh/: account.rs  app_groups.rs  app_ids.rs  certs.rs  devices.rs  teams.rs
crates/grand_slam/src/developer/v1/: app_ids.rs  capabilities.rs
crates/grand_slam/src/utils/: bundle.rs  certificate.rs  macho.rs  mod.rs  provision.rs  signer.rs
crates/ldid2/src/: provision.rs
crates/ldid2/src/signing/: signer.rs  signer_settings.rs
crates/types/src/: bundle.rs  lib.rs
crates/utils/src/: bundle.rs  device.rs  signer.rs
package/macos/PlumeImpactor.app/Contents/: Info.plist
package/windows/: installer.nsi
patches/: apple-codesign+0.29.0.patch
