[workspace]
resolver = "3"
members = [
    "apps/plumeimpactor",
    "apps/plumesign",
    "crates/grand_slam"
]

[workspace.package]
edition = "2024"
version = "0.0.1"
authors = ["khcrysalis <s03781614@icloud.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/khcrysalis/plumestore"

[workspace.dependencies]
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }

# Application
idevice = { git = "https://github.com/jkcoxson/idevice", rev = "ea61459", features = ["afc", "installation_proxy", "debug_proxy", "rsd", "tunnel_tcp_stack", "heartbeat", "usbmuxd"] }
zip = { version = "4.3", default-features = false, features = ["deflate"] }
plist = "1.8.0"
omnisette = { git = "https://github.com/PlumeImpactor/omnisette", rev = "ce1e5cc", package = "omnisette", features = ["remote-anisette-v3"] }

# Errors
thiserror = "2.0.16"

# Signing
pem = "3.0.5"
x509-certificate = "0.24.0"
apple-codesign = { version = "0.29.0", default-features = false }

# Utils
uuid = "1.18.1"
reqwest = { version = "0.11.14", features = ["blocking", "json", "default-tls"] }
serde_json = { version = "1" }

[patch.crates-io]
srp = { path="./target/patch/srp-0.6.0" }
