[workspace]
resolver = "3"
members = [
    "apps/plumeimpactor",
    "apps/plumesign",
    "crates/grand_slam",
    "crates/utils"
]

[workspace.package]
edition = "2024"
version = "0.0.1"
authors = ["khcrysalis <s03781614@icloud.com>"]
license = "MIT"
repository = "https://github.com/khcrysalis/plumestore"

# We use `opt-level = "s"` as it significantly reduces binary size.
# We could then use the `#[optimize(speed)]` attribute for spot optimizations.
# Unfortunately, that attribute currently doesn't work on intrinsics such as memset.
# [profile.release]
# codegen-units = 1           # reduces binary size by ~2%
# debug = "full"              # No one needs an undebuggable release binary
# lto = true                  # reduces binary size by ~14%
# opt-level = "s"             # reduces binary size by ~25%
# panic = "abort"             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
# split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
# strip = "symbols"           # See split-debuginfo - allows us to drop the size by ~65%
# incremental = true          # Improves re-compile times

[workspace.dependencies]
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }

# Application
idevice = { git = "https://github.com/jkcoxson/idevice", rev = "ea61459", features = ["afc", "installation_proxy", "debug_proxy", "rsd", "tunnel_tcp_stack", "heartbeat", "usbmuxd", "house_arrest"] }
zip = { version = "4.3", default-features = false, features = ["deflate"] }
plist = "1.8.0"
omnisette = { git = "https://github.com/PlumeImpactor/omnisette", rev = "ce1e5cc", package = "omnisette", features = ["remote-anisette-v3"] }

# Errors
thiserror = "2.0.16"

# Signing
pem = "3.0.5"
x509-certificate = "0.24.0"
apple-codesign = { version = "0.29.0", default-features = false }

# Utils
uuid = "1.18.1"
reqwest = { version = "0.11.14", features = ["blocking", "json", "default-tls"] }
serde_json = { version = "1" }
futures = "0.3.31"

[patch.crates-io]
srp = { path="./target/patch/srp-0.6.0" }
apple-codesign = { path="./target/patch/apple-codesign-0.29.0" }
