[package]
name = "plumeimpactor"
description = "GUI for sideloading apps onto Apple devices"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
idevice.workspace = true
zip.workspace = true
tokio.workspace = true
thiserror.workspace = true
uuid.workspace = true
plist.workspace = true
grand_slam = { path = "../../crates/grand_slam", features = ["vendored-botan"] }

wxdragon = "0.9.2"
futures = "0.3.31"
rustls = { version = "0.23.32", features = ["ring"] }

keyring = { version = "3.6.3", default-features = false, features = ["windows-native", "apple-native", "linux-native"] }

[build-dependencies]
embed-manifest = "1.4"
