[package]
name = "plumeimpactor"
description = "GUI for sideloading apps onto Apple devices"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# We use `opt-level = "s"` as it significantly reduces binary size.
# We could then use the `#[optimize(speed)]` attribute for spot optimizations.
# Unfortunately, that attribute currently doesn't work on intrinsics such as memset.
[profile.release]
codegen-units = 1           # reduces binary size by ~2%
debug = "full"              # No one needs an undebuggable release binary
lto = true                  # reduces binary size by ~14%
opt-level = "s"             # reduces binary size by ~25%
panic = "abort"             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"           # See split-debuginfo - allows us to drop the size by ~65%
incremental = true          # Improves re-compile times

[dependencies]
idevice.workspace = true
zip.workspace = true
tokio.workspace = true
thiserror.workspace = true
uuid.workspace = true
plist.workspace = true
grand_slam = { path = "../../crates/grand_slam", features = ["vendored-botan"] }

wxdragon = "0.9.2"
futures = "0.3.31"
rustls = { version = "0.23.32", features = ["ring"] }

keyring = { version = "3.6.3", default-features = false, features = ["windows-native", "apple-native", "linux-native"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-manifest = "1.4"
