[package]
name = "plumeimpactor"
description = "GUI for sideloading apps onto Apple devices"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
idevice.workspace = true
tokio.workspace = true
thiserror.workspace = true
uuid.workspace = true
plist.workspace = true
futures.workspace = true
plume_core = { path = "../../crates/core", features = ["vendored-botan"] }
plume_utils = { path = "../../crates/utils" }

wxdragon = { git = "https://github.com/PlumeImpactor/wxDragon", rev = "7d407ce", package = "wxdragon" }
image = { version = "0.25.1", default-features = false, features = ["png"] }
rustls = { version = "0.23.32", features = ["ring"] }

keyring = { version = "3.6.3", default-features = false, features = ["windows-native", "apple-native", "linux-native"] }

[build-dependencies]
embed-manifest = "1.4"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
