[package]
name = "grand_slam"
edition.workspace = true
version.workspace = true
authors.workspace = true
license = "MPL-2.0"
repository.workspace = true

[package.metadata.patch]
crates = ["srp"]

[dependencies]
tokio.workspace = true
plist.workspace = true
uuid.workspace = true
reqwest.workspace = true
omnisette.workspace = true
serde_json.workspace = true
pem.workspace = true
x509-certificate.workspace = true
apple-codesign.workspace = true
thiserror.workspace = true

rustls = { version = "0.23.32", features = ["ring"] }
serde = { version = "1", features = ["derive"] }

cbc = { version = "0.1.2", features = ["std"] }
hmac = "0.12.1"
pbkdf2 = "0.11"
sha2 = "0.10.9"
rand = "0.8.5" # cert needs this version instead of 0.9 apparently
srp = "0.6.0"
aes = "0.8.2"
botan = "0.12.0"
base64 = "0.22"

# certs
sha1 = "0.10.6"
rcgen = "0.9.3"
pem-rfc7468 = "0.7.0"
rsa = "0.9.8"
hex = "0.4.3"

[features]
default = []
vendored-botan = ["botan/vendored"]
